# j2mmd

./: Cargo.toml  Changes.md  LICENSE.txt  README.md  default.nix  dockerfile  flake.nix
.github/workflows/: autodoc.yml  cross.yml  release.yml
docs/: README.md  index.html
docs/_media/diagrams/: test-mappers.md
src/: lib.rs  main.rs
tests/: mappers_tests.rs
tests/test_data/mappers/: AddressMapper.java  CustomerMapper.java  OrderMapper.java  ProductMapper.java  UserMapper.java
tests/test_data/mappers/standalone/: StandaloneMapper.java
