[package]
name = "j2mmd"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["java", "documentation", "diagrams", "mermaid"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.20", features = ["derive", "string"] }
lazy_static = "1.5.0"
regex = "1.11.1"
