[package]
name = "j2mmd"
version = "0.2.2"
edition = "2021"
license-file = "LICENSE.txt"
keywords = ["java", "documentation", "diagrams", "mermaid"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
lazy_static = "1.5.0"
rayon = "1.10.0"
regex = "1.11.1"

[dev-dependencies]
assert_unordered = "0.3.5"
