[package]
name = "j2mmd"
version = "0.3.0"
edition = "2021"
license-file = "LICENSE.txt"
keywords = ["java", "documentation", "diagrams", "mermaid"]
categories = ["command-line-utilities"]

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive"] }
flate2 = "1.0.35"
lazy_static = "1.5.0"
rayon = "1.10.0"
regex = "1.11.1"

[dev-dependencies]
assert_unordered = "0.3.5"
